2007-10-23  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonvfs.c:
        (_g_daemon_vfs_get_uri_for_mountspec):
	Better handling for default types.
	(Handle hostname, port and username)

2007-10-22  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonvfs.c:
        * common/gvfsuriutils.[ch]:
        * daemon/gvfsbackendtrash.c:
	Update to use the gurifuncs.h from gio.
	Fix filename parsing to handle ~/x

2007-10-19  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackend.[ch]:
	Rename set_icon -> set_icon_name
	Add getter for icon_name and display_name
	
        * daemon/gvfsbackendsmb.c:
        * daemon/gvfsbackendsmbbrowse.c:
	Update for API changes
	Set display name for in fileinfo

        * daemon/gvfsbackendsftp.c:
        * daemon/gvfsbackendtrash.c:
	Update for API changes

	
2007-10-19  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
        (g_daemon_file_hash): Faster hash, since mount_spec is unique
        (g_daemon_file_equal): Compare mount spec too
	
        * daemon/gvfsbackendsmb.c:
        * daemon/gvfsbackendsmbbrowse.c:
	Set volume display names and icons
	Set content type and icon for files

2007-10-19  Alexander Larsson  <alexl@redhat.com>

        * common/gmounttracker.[ch]:
        * client/gdaemonvfs.c:
        * daemon/mount.c:
	Add user_visible to mount info
	Reorder args so that new stuff comes at the end
	
        * daemon/gvfsbackend.[ch]:
	Add user_visible setting
	Fix up various setters that set the wrong variable
	
        * daemon/gvfsbackendtrash.c:
	Add icon and better display name

2007-10-19  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonvfs.[ch]:
        * client/gdaemonvolume.c:
        * client/gdaemonvolumemonitor.[ch]:
	Implement using DEFINE_DYNAMIC_TYPE
	Actually register GDaemonVolumeMonitor in giomodule
	
        * common/gmounttracker.c:
	Update to the on-dbus format for mounts

2007-10-19  Alexander Larsson  <alexl@redhat.com>
